[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Filipe Madeira <cfilipemadeira@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
databases = {version = "*", extras = ["aiosqlite", "asyncpg"]}
pyjwt = "^2.10.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
psycopg2-binary = "*"
pydantic-settings = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
